--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: left;
-  width: 500px;
+  width: 600px;
   margin-left: 0px;
   margin-right: auto;
   font-family: Monaco, Menlo, Consolas, monospace;
@@ -18,6 +18,7 @@
 
 .MenuLink {
   color: white;
+  margin-right: 10px;
 }
 
 .Main>a:visited, .Main>a {
@@ -33,6 +34,7 @@
 }
 
 .App-screenshot {
+  text-align: left;
   height: 348px;
   padding: 10px;
 }
