--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ ul {
 
 @media only screen and (max-width: 500px) {
     body {
-        background-color: lightcyan;
+        background-color: transparent;
     }
     .App {
       width: 100%;
