--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,10 @@
   width: 600px;
   margin-left: 0px;
   margin-right: auto;
-  font-family: Monaco, Menlo, Consolas, monospace;
-  font-weight: 200;
-  font-size: small;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  word-wrap: break-word;
 }
 
 .Header {
@@ -19,6 +20,7 @@
 .MenuLink {
   color: white;
   margin-right: 10px;
+  text-transform: lowercase;
 }
 
 .Main>a:visited, .Main>a {
@@ -26,7 +28,7 @@
 }
 
 .Main {
-    padding: 10px;
+  padding: 10px;
 }
 
 .App-intro {
@@ -44,7 +46,8 @@
 }
 
 h2 {
-  font-stretch: condensed;
+  font-weight: 500;
+  font-size: 21px;
 }
 
 img {
