--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,15 @@
 .App {
   text-align: left;
   width: 60%;
-  margin-left: 0px;
-  margin-right: auto;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-size: 14px;
   word-wrap: break-word;
   margin-left: 20%;
+  margin-right: 20%;
   padding-bottom: 20px;
+  background: #F0F0F0;
+  -webkit-font-smoothing: antialiased;
 }
 
 .Header {
@@ -65,6 +66,8 @@ h2 {
   color: white;
   margin-bottom: 10px;
   margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
   text-transform: uppercase;
 
   background: linear-gradient(148deg, #000000, #044196, #ffb967);
@@ -106,7 +109,7 @@ p {
         background-color: #F0F0F0; 
     }
     .App {
-      width: 100%;
+        width: 100%;
     }
 }
 
