--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,76 @@
-.App {
-  text-align: left;
-  width: 65%;
+body {
+  text-align: center;
+  margin-left: 20%;
+  margin-right: 20%;
+  overflow-x: hidden;
+  letter-spacing: 0.3px;
+}
+
+ul {
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+h2 {
+  font-family: 'Secular One', sans-serif;
+  font-size: 44px;
+  font-weight: normal;
+  color: black;
+  margin: 10px;
+}
+
+hr {
+  color: lightgrey;
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 5em;
+  padding: 0;
+}
+
+.App { 
+  padding: 20px;
+  background-color: white;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-size: 14px;
   word-wrap: break-word;
-  margin-left: 17.5%;
-  margin-top: 10px;
-  margin-right: 17.5%;
-  padding-bottom: 20px;
-  background: #F0F0F0;
-  overflow-x: hidden;
-  -webkit-font-smoothing: antialiased;
+}
+
+.Main {
+  text-align: left;
+  line-height: 1.5em;  
 }
 
 .Header {
   height: 10%;
   padding: 10px;
   color: black;
+  text-align: center;
+}
+
+.Profile {
+  display: block;
   text-align: left;
+  margin-bottom: 20px;
+  height: 300px;
+}
+
+.App-screenshot {
+  margin-right: 10px;
+  background-color: white;
+  height: 200px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: left;
+  height: 348px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+}
+
+.Main a, a:visited {
+  text-decoration: underline;
+  line-height: 1.5em;  
 }
 
 .MenuLink {
@@ -27,104 +79,5 @@
   font-size: 17px;
   margin-right: 20px;
   text-transform: uppercase;
-}
-
-.MenuLink:hover {
-  transition: color .2s ease-in;
-  -moz-transition:color .2s ease-in;
-  -o-transition:color .2s ease-in;
-  -webkit-transition:color .2 s ease-in;
-  color: grey;
-}
-
-.Main>a:visited, .Main>a {
-  color: grey;
-}
-
-.Main {
-  padding: 10px;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-.App-screenshot {
-  text-align: left;
-  height: 348px;
-  padding: 10px;
-}
-
-.Main a, a:visited {
-  text-decoration: underline;
-  line-height: 1.5em;  
-}
-
-h2 {
-  font-weight: 600;
-  font-size: 32px;
-  line-height: 50px;
-  padding: 10px;  
-  color: white;
-  margin-bottom: 10px;
-  margin-top: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  text-transform: uppercase;
-  background: linear-gradient(148deg, #000000, #044196, #ffb967);
-  background-size: 600% 600%;
-  -webkit-animation: gradanimate 48s ease infinite;
-  -moz-animation: gradanimate 48s ease infinite;
-  animation: gradanimate 48s ease infinite;
-}
-
-h3 {
-  font-size: 17px;
-}
-
-img {
-  height: 200px;
-}
-
-ul { 
-    display: block;
-    list-style-type: disc;
-    margin-top: 1em;
-    margin-bottom: 1 em;
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 40px;
-}
-
-li {
-  line-height: 1.5em;
-}
-
-p {
-  line-height: 1.5em;  
-}
-
-@media only screen and (max-width: 800px) {
-    body {
-        background-color: #F0F0F0; 
-    }
-    .App {
-        width: 95%;
-    }
-}
-
-@-webkit-keyframes gradanimate {
-  0%{background-position:1% 0%}
-  50%{background-position:99% 100%}
-  100%{background-position:1% 0%}
-}
-@-moz-keyframes gradanimate {
-  0%{background-position:1% 0%}
-  50%{background-position:99% 100%}
-  100%{background-position:1% 0%}
-}
-@keyframes gradanimate { 
-  0%{background-position:1% 0%}
-  50%{background-position:99% 100%}
-  100%{background-position:1% 0%}
+  text-align: center;
 }
