--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,37 @@
 body {
   text-align: center;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 10vw;
+  margin-right: 10vw;
   overflow-x: hidden;
   letter-spacing: 0.3px;
 }
+
 
 ul {
   margin-left: 20px;
   margin-bottom: 10px;
 }
 
-h2 {
+h1 {
   font-family: 'Secular One', sans-serif;
   font-size: 44px;
   font-weight: normal;
   color: black;
   margin: 10px;
+}
+
+h2 {
+  font-size: 18px;
+  margin-top: 1em;
+  text-transform: uppercase;
+}
+
+h3 {
+  font-size: 16px;
+}
+
+h4 {
+  font-size: 14px;
 }
 
 hr {
@@ -76,8 +91,26 @@ hr {
 .MenuLink {
   color: black;
   font-weight: 600;  
-  font-size: 17px;
+  font-size: 18px;
   margin-right: 20px;
   text-transform: uppercase;
   text-align: center;
+}
+
+.ContentSection {
+}
+
+.ProExperience {
+  display: block;
+  border-right: dashed black 2px;
+  padding-right: 12px;
+  padding-bottom: 12px;
+}
+
+.ProExperience ul{
+  display: block;
+  margin-right: -14px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  border-right: solid lightblue 2px;
 }
