--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@ body {
   letter-spacing: 0.3px;
 }
 
+img {
+  object-fit: cover;
+}
 
 ul {
   margin-left: 20px;
@@ -75,7 +78,6 @@ hr {
 .App-screenshot {
   margin-right: 10px;
   background-color: white;
-  height: 200px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: left;
   height: 348px;
@@ -113,4 +115,35 @@ hr {
   padding-right: 10px;
   padding-bottom: 10px;
   border-right: solid lightblue 2px;
+}
+
+
+@media all and (min-width:0px) and (max-width: 800px) {
+  /* put your css styles in here */
+
+  body {
+    margin-left: 10px;
+    margin-right: 10px;
+    overflow-x: hidden;
+  }
+
+  img {
+    height: auto;
+    width: 80vw;
+  }
+
+  .App-screenshot {
+    height: auto;
+    width: 80vw;
+  }
+
+  .MenuLink {
+    color: black;
+    font-weight: 600;  
+    font-size: 16px;
+    margin-right: 5px;
+    text-transform: uppercase;
+    text-align: center;
+  }
+
 }
