--- a/src/App.css
+++ b/src/App.css
@@ -18,23 +18,23 @@ ul {
 h1 {
   font-family: 'Secular One', sans-serif;
   font-size: 44px;
-  font-weight: normal;
   color: black;
   margin: 10px;
+  font-weight: 500;
 }
 
 h2 {
-  font-size: 18px;
+  font-size: 28px;
   margin-top: 1em;
   text-transform: uppercase;
 }
 
 h3 {
-  font-size: 16px;
+  font-size: 23px;
 }
 
 h4 {
-  font-size: 14px;
+  font-size: 18px;
 }
 
 hr {
@@ -48,17 +48,27 @@ hr {
 }
 
 .App { 
-  padding: 20px;
+  padding: 18px;
   background-color: white;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 16px;
   word-wrap: break-word;
+  text-align: center;
+  display: inline-block;
+}
+
+.ContentSection {
+  display: inline-block;
 }
 
 .Main {
   text-align: left;
   line-height: 1.5em;  
+  width: 80vw;
+  max-width: 48rem;
+  margin: auto;
+  display: inline-block;
 }
 
 .Header {
@@ -93,82 +103,109 @@ hr {
 .MenuLink {
   color: black;
   font-weight: 600;  
-  font-size: 18px;
+  font-size: 20px;
   margin-right: 20px;
   text-transform: uppercase;
   text-align: center;
 }
 
-.ContentSection {
-}
-
 .ProExperience {
   display: block;
-  border-right: dashed lightgrey 2px;
-  padding-right: 12px;
+  border-left: dashed lightgrey 2px;
+  padding-left: 36px;
   padding-bottom: 12px;
 }
 
 .ProExperience ul{
   display: block;
-  margin-right: -14px;
-  padding-right: 10px;
-  padding-bottom: 10px;
-  border-right: solid darkgrey 2px;
+  margin-left: -38px;
+  padding-left: 36px;
+  padding-bottom: -8px;
+  border-left: solid darkgrey 2px;
 }
 
 .Projects {
   display: block;
-  border-right: dashed lightgrey 2px;
-  padding-right: 12px;
+  border-left: dashed lightgrey 2px;
+  padding-left: 36px;
   padding-bottom: 24px;
 }
 
 .ProjectDetails {
   display: block;
-  margin-right: -14px;
-  padding-right: 10px;
+  margin-left: -38px;
+  padding-left: 36px;
   padding-top: -10px;
   padding-bottom: -10px;
-  border-right: solid darkgrey 2px;
+  border-left: solid darkgrey 2px;
 }
-
 
 
 @media all and (min-width:0px) and (max-width: 800px) {
   /* put your css styles in here */
 
+  h1 {
+    font-size: 30px;
+  }
+
+  h2 {
+    font-size: 20px;
+
+  }
+
+  h3 {
+    font-size: 18px;
+  }
+
+  h4 {
+    font-size: 14px;
+  }
+
   body {
-    margin-left: 10px;
-    margin-right: 10px;
-    overflow-x: hidden;
+    margin-left: 4px;
+    margin-right: 4px;
+    overflow-x: scroll;
   }
 
   img {
     height: auto;
+    width: 100%;
+  }
+
+  .Main {
+    padding: 1em;
     width: 80vw;
+    font-size: 14px;
   }
 
   .App-screenshot {
     height: auto;
-    width: 80vw;
+    width: 100%;
   }
 
   .MenuLink {
     color: black;
     font-weight: 600;  
-    font-size: 16px;
+    font-size: 18px;
     margin-right: 10px;
     text-transform: uppercase;
     text-align: center;
   }
 
   .Projects {
-    border-right: none;
+    border-left: none;
+    padding-left: 0;
+    margin-left: 0;
   }
 
   .ProjectDetails {
-    border-right: none;
-  }
+    border-left: none;
+    padding-left: 0;
+    margin-left: 0;
+}
 
+  iframe {
+    width: 100%;
+    height: 100%;  
+  }
 }
