--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body, html {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     overflow-x: hidden;
+    font-size: small;
 }
 
 * {
@@ -27,7 +28,6 @@ body, html {
 
 main {
     padding: 1rem;
-    flex: 1 1;
     flex-direction: column;
     align-items: stretch;
 }
@@ -85,18 +85,15 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
 }
 
 .link-menu a {
     font-weight: 400;
-    margin-right: 1.25rem;
     font-size: 1.25rem;
-    color: #000;
-    padding: .75rem;
-    border: 1px solid #000;
-    border-radius: 10px;
-    font-weight: 500
+    font-weight: 500;
+    margin-right: 1rem;
 }
 
 .link-menu a:hover, a:active, a:focus {
@@ -120,7 +117,19 @@ code {
     column-gap: .75rem;
 }
 
-.card, .grid {
+.text-card {
+    background-color: clear;
+    margin: 1rem;
+}
+
+.text-card ul {
+    margin: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 1.5rem;
+}
+
+.card, .grid, .text-card {
     display: inline-block;
 }
 
@@ -130,19 +139,29 @@ code {
     margin: 1rem;
     padding: 1.1rem;
     text-align: left;
-    border: 1px solid #eaeaea;
     border-radius: 10px;
     transition: color .5s ease;
+    background-color: #faf9f9;
+    border: 2px solid rgb(52, 50, 77);
 }
 
 .card img {
     max-height: 400px;
     max-width: 500px;
+    margin-left: 5px;
+}
+
+.card-media-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
 }
 
 .card h3 {
-    margin: 0 0 1rem;
-    font-size: 1.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 1.5rem;
+    font-size: 1.6rem;
+    text-align: center;
 }
 
 .card-body {
