--- a/src/styles.css
+++ b/src/styles.css
@@ -192,6 +192,9 @@ iframe {
         flex-wrap: wrap;
         max-width: 300px;
     }
+    .card-media-container {
+        max-height: auto;
+    }
     .card img {
         max-width: 250px;
     }
