--- a/src/styles.css
+++ b/src/styles.css
@@ -110,10 +110,10 @@ code {
 
 .grid {
     width: auto;
-    columns: 520px;
-    grid-column-gap: 1rem;
-    -moz-column-gap: 1rem;
-    column-gap: 1rem;
+    columns: 508px;
+    grid-column-gap: 0.75rem;
+    -moz-column-gap: 0.75rem;
+    column-gap: 0.75rem;
 }
 
 .text-card {
@@ -133,7 +133,7 @@ code {
 }
 
 .card {
-    width: 520px;
+    width: 510px;
     margin: 1rem;
     padding: 1.1rem;
     text-align: left;
@@ -146,7 +146,8 @@ code {
 .card img {
     max-height: 400px;
     max-width: 500px;
-    margin-left: 4px;
+    margin-left: 2px;
+    margin-right: 2px;
     margin-bottom: 4px;
     object-fit: contain; 
 }
@@ -194,7 +195,7 @@ iframe {
     .card {
         width: auto;
         min-width: 300px;
-        max-width: 520px;
+        max-width: 510px;
     }
     .card img {
         max-width: 250px;
