--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ body, html {
 }
 
 * {
-    box-sizing: border-box;
+    /*! box-sizing: border-box; */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -108,13 +108,8 @@ code {
 }
 
 .grid {
-    max-width: 1160px;
-    width: auto;
-    column-count: 2;
-    column-width: 558px;
-    grid-column-gap: 0.75rem;
-    -moz-column-gap: 0.75rem;
-    column-gap: 0.75rem;
+    text-align: center;
+    width: 100%;
 }
 
 .text-card {
@@ -130,46 +125,53 @@ code {
 }
 
 .card, .grid, .text-card {
-    display: inline-block;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
 }
 
 .card {
-    width: 560px;
+    display: inline-block;
+    width: 600px;
     margin: 1rem;
-    padding: 1.1rem;
+    padding: 1rem;
     text-align: left;
     border-radius: 10px;
     transition: color .5s ease;
-    background-color: #eeeeee;
-    border: 2px solid #e0e0e0;
+    border: 4px solid #e6e6e6;
 }
 
 .card img {
     max-height: 400px;
-    max-width: 500px;
+    max-width: 600px;
     margin-left: 2px;
     margin-right: 2px;
-    margin-bottom: 4px;
-    object-fit: contain; 
+    margin-bottom: 2px;
+    margin-top: 4px;
+    object-fit: contain;
+    border: 1px rgb(255, 255, 255) solid; 
 }
 
 .card-media-container {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    margin: 1rem;
 }
 
 .card h3 {
-    margin-top: 0.5rem;
-    margin-bottom: 1.5rem;
-    font-size: 1.6rem;
+    font-weight: 600;
+    margin-top: 1rem;
+    font-size: 1.75rem;
     text-align: center;
 }
 
 .card-body {
+    font-weight: 400;
     margin: 0;
     font-size: 1.25rem;
-    line-height: 1.5;
+    line-height: 1.4;
+    background-color: clear;
 }
 
 .card-body a {
@@ -181,12 +183,13 @@ code {
 }
 
 iframe {
-    max-width: 500px;
+    max-width: 600px;
 }
 
 @media (max-width:600px){
     .grid {
         column-width: auto;
+        column-count: 1;
     }
     .link-menu {
         flex-wrap: wrap;
@@ -206,29 +209,5 @@ iframe {
     iframe {
         width: 100%;
         height: 100%;
-    }
-}
-
-@media (max-width:1120px) {
-    .grid {
-        flex-flow: column nowrap;
-        column-count: 1;
-    }
-
-}
-
-@media (min-width:1800px) {
-    .grid {
-        max-width: 1800px;
-        width: auto;
-        column-count: 3;
-        column-width: 558px;
-        grid-column-gap: 0.75rem;
-        -moz-column-gap: 0.75rem;
-        column-gap: 0.75rem;
-    }
-
-    .card {
-        width: 560px;
     }
 }
