--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body, html {
 }
 
 * {
-    box-sizing: border-box;
+    /*! box-sizing: border-box; */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -108,7 +108,8 @@ code {
 }
 
 .grid {
-    max-width: 800px;
+    text-align: center;
+    width: 100%;
 }
 
 .text-card {
@@ -124,18 +125,20 @@ code {
 }
 
 .card, .grid, .text-card {
-    display: inline-block;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
 }
 
 .card {
-    width: 100%;
+    display: inline-block;
+    width: 600px;
     margin: 1rem;
     padding: 1rem;
     text-align: left;
     border-radius: 10px;
     transition: color .5s ease;
     border: 4px solid #e6e6e6;
-    background-color: #f2f2f2;
 }
 
 .card img {
