--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ a {
   top: -10px;
   position: absolute;
   z-index: -1;
-  width: 200vw;
+  width: 150%;
   height: 100px;
   background-color: rgb(28, 24, 27);
   border-bottom: 10px solid rgb(177, 177, 208);
@@ -106,7 +106,7 @@ a {
 }
 
 .link-menu a {
-    height: 50px;
+  height: 50px;
   background-color: clear;
   font-weight: 00;
   font-size: 24pt;
@@ -145,8 +145,8 @@ code {
 }
 
 .text-card ul {
-    align-self: flex-start;
-    text-align: left;
+  align-self: flex-start;
+  text-align: left;
   margin: 0rem 0rem 0rem 1rem;
   padding-top: 0px;
   padding-bottom: 0px;
@@ -212,4 +212,37 @@ iframe {
   max-width: 600px;
   background-color: rgb(28, 24, 27);
   border: 8px rgb(255, 255, 255) solid;
+}
+
+@media (max-width: 600px) {
+  .grid {
+    column-width: auto;
+    column-count: 1;
+  }
+
+  .link-menu a {
+    font-size: 16pt;
+    color: black;
+  }
+
+  .link-menu:before{
+    display: none;
+  }
+
+  .card {
+    width: auto;
+    min-width: 300px;
+    max-width: 510px;
+  }
+
+  .card img {
+    max-width: 250px;
+  }
+
+  iframe {
+    width: 100%;
+    height: 100%;
+    background-color: clear;
+    border: none;
+  }
 }
