--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 body,
 html {
+  vertical-align: baseline;
   padding: 0px;
   margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -29,7 +30,6 @@ main {
 main {
   width: 100%;
   flex-direction: column;
-  align-items: stretch;
 }
 
 footer {
@@ -70,13 +70,13 @@ a {
 }
 
 .title {
-  margin: 0rem 0rem 1rem 0rem;
-  line-height: 1;
-  font-size: 30pt;
+  margin: 2rem;
+  line-height: 4rem;
+  font-size: 36pt;
+  text-align: center;
 }
 
-.description,
-.title {
+.description {
   text-align: left;
 }
 
@@ -85,28 +85,16 @@ a {
   font-size: 1.5rem;
 }
 
-.link-menu:before {
-  content: "";
-  left: -10px;
-  top: -10px;
-  position: absolute;
-  z-index: -1;
-  width: 200vw;
-  height: 100px;
-  background-color: rgb(28, 24, 27);
-  border-bottom: 10px solid rgb(177, 177, 208);
-}
-
 .link-menu {
-  height: 110px;
-  color: rgb(255, 255, 255);
+  color: rgb(79, 79, 79);
+  height: 75px;
   display: flex;
   justify-content: flex-start;
   align-content: center;
 }
 
 .link-menu a {
-    height: 50px;
+  height: 50px;
   background-color: clear;
   font-weight: 00;
   font-size: 24pt;
@@ -129,15 +117,23 @@ code {
 }
 
 .grid {
-  margin-top: 1rem;
+  margin: auto auto 1rem auto;
+  max-width: max(100%, 650px);
   display: flex;
   flex-flow: row wrap;
-  width: 100%;
+  justify-content: center;
 }
 
 .text-card {
-  background-color: clear;
+  padding: 1rem;
   max-width: 650px;
+  margin-bottom: 1rem;
+  justify-self: center;
+}
+
+.text-card p {
+  display: block;
+  width: 100%;
 }
 
 .text-card > div {
@@ -145,8 +141,8 @@ code {
 }
 
 .text-card ul {
-    align-self: flex-start;
-    text-align: left;
+  align-self: flex-start;
+  text-align: left;
   margin: 0rem 0rem 0rem 1rem;
   padding-top: 0px;
   padding-bottom: 0px;
@@ -158,7 +154,7 @@ code {
   flex-direction: column;
   align-content: left;
   width: 600px;
-  margin: 0.5rem 1rem 0.5rem 0rem;
+  margin: 0.5rem 1rem 0.5rem 1rem;
   padding: 1rem;
   text-align: left;
   border-radius: 10px;
@@ -212,4 +208,37 @@ iframe {
   max-width: 600px;
   background-color: rgb(28, 24, 27);
   border: 8px rgb(255, 255, 255) solid;
+}
+
+@media (max-width: 600px) {
+  .card img {
+    max-width: 250px;
+  }
+
+  iframe {
+    width: 100%;
+    height: 100%;
+    background-color: clear;
+    border: none;
+  }
+
+  .text-card {
+    width: auto;
+  }
+
+  .grid {
+    column-width: auto;
+    column-count: 1;
+  }
+
+  .link-menu a {
+    font-size: 16pt;
+    color: black;
+  }
+
+  .card {
+    width: auto;
+    min-width: 300px;
+    max-width: 510px;
+  }
 }
